@@ -1,0 +1,51 @@
+<PixelEndcapLayers>
+
+<PixelEndcapRing>
+  <Name> PixelEndcapRing1 </Name>
+  <LayerNumber> 0 </LayerNumber>
+  <LayerPosition> 1 </LayerPosition>
+   <RingPositions> 1308. 1391. 1501. 1620. 1750. 1830. 1910. 1997. 2088. 2188. 2292. 2397. 2503. 2618. 2740. 2867. 3000. </RingPositions>
+  <Radius> 80. </Radius>
+  <RadiusType> Inner </RadiusType>
+  <NumberOfSectors> 24 </NumberOfSectors>
+  <RingModuleType> FourChip_RD53_25x100 </RingModuleType>
+  <RingModuleZSeparation> 6. </RingModuleZSeparation>
+</PixelEndcapRing>
+
+<PixelEndcapRing>
+  <Name> PixelEndcapRing2 </Name>
+  <LayerNumber> 1 </LayerNumber>
+  <LayerPosition> 2 </LayerPosition>
+  <RingPositions> 823. 899. 986. 1082. 1189. 1308. 1394. 1486. 1598. 1685. 1778. 1876. 1980. 2090. 2246. 2414. 2596. 2793. 3000.</RingPositions>
+  <Radius> 150. </Radius>
+  <RadiusType> Inner </RadiusType>
+  <NumberOfSectors> 36 </NumberOfSectors>
+  <RingModuleType> FourChip_RD53_25x100 </RingModuleType>
+  <RingModuleZSeparation> 6. </RingModuleZSeparation>
+</PixelEndcapRing>
+
+<PixelEndcapRing>
+  <Name> PixelEndcapRing3 </Name>
+  <LayerNumber> 2 </LayerNumber>
+  <LayerPosition> 3 </LayerPosition>
+  <RingPositions> 823. 944. 1088. 1258. 1349. 1448. 1554. 1669. 1794. 1929. 2075. 2233. 2404. 2589. 2790. 3000.</RingPositions>
+  <Radius> 212.5 </Radius>
+  <RadiusType> Inner </RadiusType>
+  <NumberOfSectors> 48 </NumberOfSectors>
+  <RingModuleType> FourChip_RD53_25x100 </RingModuleType>
+  <RingModuleZSeparation> 6. </RingModuleZSeparation>
+</PixelEndcapRing>
+
+<PixelEndcapRing>
+  <Name> PixelEndcapRing4 </Name>
+  <LayerNumber> 3 </LayerNumber>
+  <LayerPosition> 4 </LayerPosition>
+  <RingPositions> 823. 918. 1027. 1151. 1294. 1456. 1642. 1854. 1968. 2089. 2217. 2355. 2502. 2658. 2825. 3000.</RingPositions>
+  <RadiusType> Inner </RadiusType>
+  <Radius> 275. </Radius>
+  <NumberOfSectors> 60 </NumberOfSectors>
+  <RingModuleType> FourChip_RD53_25x100 </RingModuleType>
+  <RingModuleZSeparation> 6. </RingModuleZSeparation>
+</PixelEndcapRing>
+
+</PixelEndcapLayers>
