@@ -1,0 +1,58 @@
+<PixelBarrelLayers>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel0 </Name>
+  <StaveType> IBL </StaveType>
+  <Number> 0 </Number>
+  <NStaves> 16 </NStaves>
+  <LayerRadius> 39  </LayerRadius>
+  <LayerPhiOfModuleZero> 0. </LayerPhiOfModuleZero>
+  <StaveTilt> -0.24435 </StaveTilt>
+  <StaveZOffset> 0 </StaveZOffset>
+</PixelBarrelLayer>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel1 </Name>
+  <StaveType> IBL </StaveType>
+  <Number> 1 </Number>
+  <LayerRadius> 75 </LayerRadius>
+  <NStaves> 16 </NStaves>
+  <LayerPhiOfModuleZero> 0. </LayerPhiOfModuleZero>
+  <StaveTilt> -0.24435 </StaveTilt>
+  <StaveZOffset> 0 </StaveZOffset>
+</PixelBarrelLayer>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel2 </Name>
+  <StaveType> IBL </StaveType>
+  <Number> 2 </Number>
+  <LayerRadius> 155 </LayerRadius>
+  <NStaves> 32 </NStaves>
+  <LayerPhiOfModuleZero> 0. </LayerPhiOfModuleZero>
+  <StaveTilt> -0.24435 </StaveTilt>
+  <StaveZOffset> 0 </StaveZOffset>
+</PixelBarrelLayer>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel3 </Name>
+  <StaveType> IBL </StaveType>
+  <Number> 3 </Number>
+  <LayerRadius> 213 </LayerRadius>
+  <NStaves> 44 </NStaves>
+  <LayerPhiOfModuleZero> 0. </LayerPhiOfModuleZero>
+  <StaveTilt> -0.24435 </StaveTilt>
+  <StaveZOffset> 0 </StaveZOffset>
+</PixelBarrelLayer>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel4 </Name>
+  <StaveType> IBL </StaveType>
+  <Number> 4 </Number>
+  <LayerRadius> 271 </LayerRadius>
+  <NStaves> 54 </NStaves>
+  <LayerPhiOfModuleZero> 0. </LayerPhiOfModuleZero>
+  <StaveTilt> -0.24435 </StaveTilt>
+  <StaveZOffset> 0 </StaveZOffset>
+</PixelBarrelLayer>
+
+</PixelBarrelLayers>
