@@ -1,0 +1,59 @@
+<PixelStaves>
+
+  <PixelStave>
+    <Name> PixelBarrel0 </Name>
+    <Type> IBL </Type>
+    <Layer> 0 </Layer>
+    <NBarrelModules>30</NBarrelModules>
+    <BarrelModuleType> DoubleLength_RD53_25x100 </BarrelModuleType>
+    <BarrelModuleGap> 0.2 </BarrelModuleGap>
+    <BarrelModuleAngle> 0. </BarrelModuleAngle>
+    <StaveSupportLength> 1218 </StaveSupportLength>
+  </PixelStave>
+
+  <PixelStave>
+    <Name> PixelBarrel1 </Name>
+    <Type> IBL </Type>
+    <Layer> 1 </Layer>
+    <NBarrelModules>30</NBarrelModules>
+    <BarrelModuleType>FourChip_RD53_25x100</BarrelModuleType>
+    <BarrelModuleGap> 0.2 </BarrelModuleGap>
+    <BarrelModuleAngle> 0. </BarrelModuleAngle>
+    <StaveSupportLength> 1218 </StaveSupportLength>
+  </PixelStave>
+
+
+  <PixelStave>
+    <Name> PixelBarrel2 </Name>
+    <Type> IBL </Type>
+    <Layer> 2 </Layer>
+    <NBarrelModules> 18 </NBarrelModules>
+    <BarrelModuleType> FourChip_RD53_25x100 </BarrelModuleType>
+    <BarrelModuleGap> 0.2 </BarrelModuleGap>
+    <BarrelModuleAngle> 0. </BarrelModuleAngle>
+    <StaveSupportLength> 731 </StaveSupportLength>
+  </PixelStave>
+
+  <PixelStave>
+    <Name> PixelBarrel3 </Name>
+    <Type> IBL</Type>
+    <Layer> 3 </Layer>
+    <NBarrelModules> 18</NBarrelModules>
+    <BarrelModuleType> FourChip_RD53_25x100 </BarrelModuleType>
+    <BarrelModuleGap> 0.2 </BarrelModuleGap>
+    <BarrelModuleAngle> 0. </BarrelModuleAngle>
+    <StaveSupportLength> 731 </StaveSupportLength>
+  </PixelStave>
+
+  <PixelStave>
+    <Name> PixelBarrel4 </Name>
+    <Type> IBL</Type>
+    <Layer> 4</Layer>
+    <NBarrelModules> 18 </NBarrelModules>
+    <BarrelModuleType> FourChip_RD53_25x100 </BarrelModuleType>
+    <BarrelModuleGap> 0.2 </BarrelModuleGap>
+    <BarrelModuleAngle> 0. </BarrelModuleAngle>
+    <StaveSupportLength> 731 </StaveSupportLength>
+  </PixelStave>
+
+</PixelStaves>
