@@ -33,6 +33,8 @@
 </FrontEndChip>
 
 <!-- ######## ITK modules  ########### -->
+
+<!-- ### 50 um x 50 um pixels ### -->
 	
 <Module>
   <moduleName>SingleChip_RD53</moduleName>
@@ -67,6 +69,48 @@
 <Module>
   <moduleName>FourChip_RD53</moduleName>
   <chipName> RD53 </chipName>
+  <lengthInChips>2</lengthInChips>
+  <widthMaxInChips>2</widthMaxInChips>
+  <sensorThickness>0.150</sensorThickness>
+  <chipThickness>0.150</chipThickness>
+  <hybridThickness>0.</hybridThickness>
+</Module>
+
+<!-- ### 25 um x 100 um pixels ### -->
+
+<Module>
+  <moduleName>SingleChip_RD53_25x100</moduleName>
+  <chipName> RD53_25x100 </chipName>
+  <lengthInChips>1</lengthInChips>
+  <widthMaxInChips>1</widthMaxInChips>
+  <sensorThickness>0.150</sensorThickness>
+  <chipThickness>0.150</chipThickness>
+  <hybridThickness>0.</hybridThickness>
+</Module>
+
+<Module>
+  <moduleName>DoubleLength_RD53_25x100</moduleName>
+  <chipName> RD53_25x100 </chipName>
+  <lengthInChips>2</lengthInChips>
+  <widthMaxInChips>1</widthMaxInChips>
+  <sensorThickness>0.150</sensorThickness>
+  <chipThickness>0.150</chipThickness>
+  <hybridThickness>0.</hybridThickness>
+</Module>
+
+<Module>
+  <moduleName>DoubleWidth_RD53_25x100</moduleName>
+  <chipName> RD53_25x100 </chipName>
+  <lengthInChips>1</lengthInChips>
+  <widthMaxInChips>2</widthMaxInChips>
+  <sensorThickness>0.150</sensorThickness>
+  <chipThickness>0.150</chipThickness>
+  <hybridThickness>0.</hybridThickness>
+</Module>
+
+<Module>
+  <moduleName>FourChip_RD53_25x100</moduleName>
+  <chipName> RD53_25x100 </chipName>
   <lengthInChips>2</lengthInChips>
   <widthMaxInChips>2</widthMaxInChips>
   <sensorThickness>0.150</sensorThickness>
