@@ -1,0 +1,53 @@
+<PixelBarrelLayers>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel0 </Name>
+  <StaveType> Alpine </StaveType>
+  <Number> 0 </Number>
+  <NStaves> 18 </NStaves>
+  <LayerRadius> 39.0  </LayerRadius>
+  <StaveTilt> 0.0  </StaveTilt>
+  <StaveZOffset> 0. </StaveZOffset>
+</PixelBarrelLayer>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel1 </Name>
+  <StaveType> Alpine </StaveType>
+  <Number> 1 </Number>
+  <LayerRadius> 85.0 </LayerRadius>
+  <NStaves> 18 </NStaves>
+  <StaveTilt> 0.0 </StaveTilt>
+  <StaveZOffset> 0. </StaveZOffset>
+</PixelBarrelLayer>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel2 </Name>
+  <StaveType> Alpine </StaveType>
+  <Number> 2 </Number>
+  <LayerRadius> 155. </LayerRadius>
+  <NStaves> 32 </NStaves>
+  <StaveTilt> 0.0 </StaveTilt>
+  <StaveZOffset> 0. </StaveZOffset>
+</PixelBarrelLayer>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel3 </Name>
+  <StaveType> Alpine </StaveType>
+  <Number> 3 </Number>
+  <LayerRadius> 213. </LayerRadius>
+  <NStaves> 44 </NStaves>
+  <StaveTilt> 0.0 </StaveTilt>
+  <StaveZOffset> 0. </StaveZOffset>
+</PixelBarrelLayer>
+
+<PixelBarrelLayer>
+  <Name> PixelBarrel4 </Name>
+  <StaveType> Alpine </StaveType>
+  <Number> 4 </Number>
+  <LayerRadius> 271. </LayerRadius>
+  <NStaves> 54 </NStaves>
+  <StaveTilt> 0.0 </StaveTilt>
+  <StaveZOffset> 0. </StaveZOffset>
+</PixelBarrelLayer>
+
+</PixelBarrelLayers>
