@@ -1,3 +1,11 @@
+2016-04-12 Simon Viel
+        * InclBrl4 layout with 25 x 100 micron pixels available
+        * tagged as InDetTrackingGeometryXML-00-00-35
+
+2016-04-08 Simon Viel
+        * ExtBrl4 layout with 25 x 100 micron pixels available
+        * tagged as InDetTrackingGeometryXML-00-00-34
+
 2016-03-21 Noemi Calace <noemi.calace@cern.ch>
 	* Adding BinnedLayerMaterial to layers
 	* Adding custom material flag
